needed to fix the output
the usernames did not fit

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,8 +3,10 @@
 /* =================================
 DEFAULT STYLES (NO MEDIA QUERY)
 Device width:
-    320px -->   <-- 768px
+    320px --> @media (max-width: 320px) {
+		}  <-- 768px
 ==================================== */
+
 * {
 	box-sizing: border-box;
 }
@@ -57,8 +59,7 @@ label {
 	border-color: #FF2724;
 	border-style: groove;
 	border-width: thick;
-	width: 340px;
-	max-width: 320px;
+	width: 100%;
 	height: 120px;
 	font-size: 40px;
 	margin: auto;
@@ -101,7 +102,7 @@ Device width:
 @media (min-width: 768px) {
 	* {
 		box-sizing: border-box;
-	}
+
 
 
 /* ---------------------------------------------------------------------------------- */
@@ -142,6 +143,7 @@ Device width:
 		 box-shadow: 10px 10px 20px 0px rgba(0,0,0,0.75);
 	 }
 }
+
  /*---------------------------------------------------------------*/
 body  {
 	height: 100vh;
@@ -186,7 +188,7 @@ label {
 	border-color: #FF2724;
 	border-width: thick;
 	border-style: groove;
-	width: 300px ;
+	width: 320px;
 	height: 120;
 	font-size: 40px;
 	margin: auto;
@@ -197,10 +199,11 @@ label {
  .output {
 	 border-color: #FF2724;
 	 border-style: groove;
+	 text-align: center;
 	 border-width: thick;
-	 width: 493px ;
+	 width: 396px;
 	 height: 120px;
-	 font-size: 40px;
+	 font-size: 30px;
 	 margin: auto;
 	 padding: 10px;
 	 border-width: 6px;
